<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_marginTop="6dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:backgroundTint="@color/white"
        app:cardElevation="10dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/productPic"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:padding="10dp"
                android:contentDescription="@string/profile"
                android:scaleType="fitCenter"

                android:src="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/item_color"
                android:paddingStart="8dp"
                android:paddingTop="3dp"
                android:textColor="@color/black"
                android:text="@string/app_name"
                android:textSize="17sp"
                android:maxLines="1"
                android:ellipsize="end"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/productPrice"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/item_color"
                android:textColor="@color/primary"
                android:paddingStart="8dp"
                android:paddingTop="3dp"
                android:text="@string/menu"
                android:textSize="16sp"
                tools:ignore="RtlSymmetry" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>