<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.CategoryFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/profile"
            android:padding="4dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:text="@string/myCart"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/catProductList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/simmerEffect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingClass">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/product_shimmer_view"/>
                <include layout="@layout/product_shimmer_view"/>
                <include layout="@layout/product_shimmer_view"/>
                <include layout="@layout/product_shimmer_view"/>
                <include layout="@layout/product_shimmer_view"/>
                <include layout="@layout/product_shimmer_view"/>

            </LinearLayout>
        </com.facebook.shimmer.ShimmerFrameLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/something"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="270.00dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:text="@string/something"
        android:textSize="14sp"
        android:textColor="@color/orange"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>